# sparpy

./: CMakeLists.txt  README.md
src/: interactions.hpp  python.cpp  python.hpp  simulation.hpp  sparpy.h  timestepping.hpp
tests/: CMakeLists.txt  test_container.py  test_simulation.py
